--- a/estilos.css
+++ b/estilos.css
@@ -1,90 +1,46 @@
 *
 {
     padding: 0px;
-    margin:0px
-}
-a
-{
-    text-decoration: none;
-    color: black;
-    padding: 15px;
-    font-size: 20px;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;   
 }
 
-header
-{
-    display: flex;
-    min-height: 70px;
-    align-items: center;
-    padding: 20px;
-    justify-content: space-between;
-    background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
-}
-
-.logo
-{
-    display: flex;
-    align-items: center;
-}
-
-.logo img
-{
-    height: 150px;
-    margin-right: 10px;
-}
-
-h2
-{
-    font-size: 50px
-}
 span
 {
     color: #1822ac;
 }
-nav a
+.inicio 
 {
-    font-weight: 600;
-    padding-right: 10px;
-}
-nav a:hover
-{
-    color:#1822ac;
 
-    }
-
-.contenedor
-{
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
-    width: auto;
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    text-align: center;
+    margin: auto;
 }
 
-
-.img2
+.inicio h3
 {
     text-align: center;
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    font-size: 40px;
+    padding: 10px;
+}
+.inicio img
+{
+    height: 450px;
 }
 
-
-.btn
+.inicio p
 {
-font-size: 50px; 
-text-align: center; 
-padding: 100px;
-background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    padding-top: 10px;
+    font-size: 50px;
 }
 
 .btn_h h3
 {
-    text-align: center;
-    font-size: 40px;
-    padding-top: 250px; 
-    padding-bottom: 50px;
+    text-align:center;
+    font-size:40px;
+    padding-top: 50px; 
+    padding-bottom: 30px;
     text-decoration: underline;
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 .btn_h p
@@ -92,7 +48,6 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     text-align: center;
     font-size: 25px;
     color: black;
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 .redes
@@ -100,28 +55,123 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     height: 1%;
     display: inline;
 }
+/* 2do framework*/
 
-.inicio 
+
+.ofertas
 {
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); ;
     text-align: center;
-}
-
-.inicio p
+    padding: 5px;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);}
+.ofertas h3
 {
-    padding-top: 20px;
-    font-size: 50px;
+    font-size: 2em;
+    text-decoration: underline;
+    font-weight: bold;
+}
+.ofertas p
+{
+    font-size: 1.5em;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.ofertas a
+{
+    font-size: 40px;
+    border-radius: 50%;
+}
+
+.col h3
+{
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.col img
+{
+    height: 300px;
+    border-radius: 30px;
+    width: 300px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.card
+{
+    left: 20%;
+}
+.col p
+{
+    padding: 10px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.col a
+{
+    border-radius: 20px;
+    background-color: #010301;
+    font-size: 30px;
+    text-decoration: none;
+    color: #fff;
+    letter-spacing:3px;
+    padding: 3px;
+}
+.col a:hover
+{
+    color: #e2d1c3;
 }
 
 
-/* 2do framework*/ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 3do framework*/ 
 
 .cuerpo2
 {
     text-align: center;
     padding-top: 10px;
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-    
+    margin: 0 auto;
 }
 .cuerpo2 h2
 {
@@ -142,13 +192,18 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 .cuerpo2 img
 {
- border-radius: 40px;
- padding: 25px;
+    display: block;
+    margin: 0% auto;
+    border-radius: 40px;
+    padding: 25px;
+    height: 400px;
+    border:solid #A6A7BD
  
 }
 .grupo__1
 {
-    margin: auto;
+    border: solid #A6A7BD;
+    margin: 0 auto;
     text-align: center;
     padding: 10px;
     background-image: linear-gradient(-20deg, #e9defa 50%, #fbfcdb 60%);
@@ -325,51 +380,38 @@ color: aqua;
     font-size: 15px;
 }
 
-@media (max-width:600px){
 
-    header
-    {
-        padding: 5px 
-    }
-    .logo 
-    {
-        display: none;
-    }
-    nav a {
-        padding: 10px;
-    }
-    .btn h3{
-        font-size: 50px;
-    }
-    .inicio img{
-        height: 400px;
-    }
-    .img2 img{
-        height: 350px;
-    }
-  .btn_h{
-    font-size: small;
-    }  
-    .box img{
-        display: none;
-    }
 
-    .box h2{
-    display: none;
-}
-    .box p{
-        display: none;
-    }
-    .red-social
-    {
-        align-items: center;
-        
-    }
-    .red-social{
-        display: none;
-    }
-    }
+
+
+
+
+
+
+
+
+
+
+
+
+
  
+
+@media screen and (max-width:800px) {
+    .pie-pagina .grupo-1
+{
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+    padding: 35px 0px;
+
+    }
+}
+    
+
+
+
+
 
 
 
