--- a/estilos.css
+++ b/estilos.css
@@ -426,42 +426,14 @@ color: aqua;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
     }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     .pie-pagina .grupo-1
-{
+    {
     width: 90%;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 30px;
     padding: 35px 0px;
-
     }
-
+}
     
 
 
