--- a/sass/main.css
+++ b/sass/main.css
@@ -49,4 +49,40 @@
 .map_ iframe {
   align-items: center;
   padding: 10px;
+}
+
+@media screen and (max-width: 800px) {
+  .contacto_ h2 {
+    padding: 10px;
+    font-size: 1.5em;
+    color: #CD23DB;
+    font-weight: bold;
+    text-decoration: underline;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  }
+  .form_ {
+    padding: 5%;
+    font-size: 1em;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  }
+  .enviar {
+    align-items: center;
+  }
+  .enviar a {
+    color: black;
+    padding-left: 40%;
+    font-size: 1.5em;
+    text-decoration: none;
+    margin: auto;
+    padding-bottom: 10px;
+  }
+  .enviar a:hover {
+    color: #CD23DB;
+    font-size: 2em;
+  }
+  .map_ iframe {
+    width: 400px;
+    align-items: center;
+    padding: 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
